<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:drawableLeft="@drawable/ic_activity_androiduser"
        android:drawableStart="@drawable/ic_activity_androiduser"
        android:drawablePadding="10dp"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_activity_password"
        android:drawableStart="@drawable/ic_activity_password"
        android:drawablePadding="10dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_activity_password"
        android:drawableStart="@drawable/ic_activity_password"
        android:drawablePadding="10dp"
        android:hint="@string/confirm" />


    <Button
        android:id="@+id/btnsignup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient"
        android:text="@string/register"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/orTxt"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_below="@+id/btnsignup"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:text="OR"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/orTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient"
        android:text="@string/signin"
        android:textSize="15sp" />


</RelativeLayout>